--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_local_notifications: ^17.1.2
+  syncfusion_flutter_pdfviewer: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -44,6 +46,7 @@ dependencies:
   shared_preferences: ^2.5.3
   url_launcher: ^6.3.2
   webview_flutter: ^4.13.0
+  firebase_messaging: ^16.0.2
 
 dev_dependencies:
   flutter_test:
