--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   firebase_messaging: ^16.0.2
   google_maps_flutter: ^2.13.1
   geolocator: ^14.0.2
+  http: ^1.5.0
 
 dev_dependencies:
   flutter_test:
