--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,11 @@ dependencies:
   google_maps_flutter: ^2.13.1
   geolocator: ^14.0.2
   http: ^1.5.0
+  dio: ^5.9.0
+  open_filex: ^4.7.0
+  path_provider: ^2.1.5
+  lordicon: ^1.0.3
+  lottie: ^2.7.0
 
 dev_dependencies:
   flutter_test:
@@ -77,6 +82,7 @@ flutter:
   assets:
     - assets/images/logo.png
     - assets/containars/
+    - assets/lordicons/
     
   fonts:
     - family: Tajawal
