--- a/ios/podfile
+++ b/ios/podfile
@@ -8,8 +8,7 @@ project 'Runner', {
   'Release' => :release,
 }
 
-def flutter_installation
-  flutter_application_path = File.expand_path('..')
+def flutter_install_all_ios_pods(flutter_application_path)
   eval(File.read(File.join(flutter_application_path, '.flutter-plugins-dependencies')))
 end
 
@@ -17,5 +16,11 @@ target 'Runner' do
   use_frameworks!
   use_modular_headers!
 
-  flutter_installation
+  flutter_install_all_ios_pods(File.dirname(File.realpath(__FILE__)))
+end
+
+post_install do |installer|
+  installer.pods_project.targets.each do |target|
+    flutter_additional_ios_build_settings(target)
+  end
 end
